--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.Container{
+  width: 1000px;
+  margin: 0 auto;
+  padding: 30px;
 }
