--- a/src/containers/NumberCode/NumberCode.css
+++ b/src/containers/NumberCode/NumberCode.css
@@ -1,8 +1,8 @@
 .NumberCode{
     padding: 5px;
     width: 31%;
-    border: 2px solid #ccc;
-    background: #ccc;
+    border: 1px solid #ccc;
+    background: #eee;
     border-radius: 10px;
 }
 .numberText{
@@ -11,7 +11,7 @@
 .numberShow{
     text-align: center;
     height: 100px;
-    border: 2px solid #ccc;
+    border: 1px solid #ccc;
     margin: 10px 2px;
     padding: 0 5px;
     border-radius: 10px;
@@ -37,7 +37,7 @@
     font-size: 20px;
 }
 .E {
-    background: rgba(0,125,219,0.94);
+    background: #2bb459;
     color: #fff;
 }
 .delete{
@@ -45,6 +45,6 @@
     color: #fff;
 }
 .num {
-    background: rgba(13,13,14,0.94);
+    background: #19191b;
     color: #fff;
 }
