--- a/src/containers/NumberCode/NumberCode.css
+++ b/src/containers/NumberCode/NumberCode.css
@@ -36,7 +36,7 @@
     margin: 2px;
     font-size: 20px;
 }
-.E {
+.decisionBtn {
     background: #2bb459;
     color: #fff;
 }
@@ -47,4 +47,7 @@
 .num {
     background: #19191b;
     color: #fff;
+}
+.C{
+    background: #bd1722;
 }
