--- a/src/containers/NumberCode/NumberCode.css
+++ b/src/containers/NumberCode/NumberCode.css
@@ -1,7 +1,7 @@
 .NumberCode{
     padding: 5px;
     width: 31%;
-    border: 1px solid #ccc;
+    border: 1px solid #aaa;
     background: #eee;
     border-radius: 10px;
 }
@@ -11,7 +11,7 @@
 .numberShow{
     text-align: center;
     height: 100px;
-    border: 1px solid #ccc;
+    border: 1px solid #aaa;
     margin: 10px 2px;
     padding: 0 5px;
     border-radius: 10px;
